kubernetes/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-tracker-frontend-ingress
  namespace: finance-tracker-ns
  annotations:

spec:
  ingressClassName: nginx
  rules:
    - host: finance.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
